--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 cffi==1.17.1
 cryptography==44.0.1
 Django==5.1.6
+mysqlclient==2.2.7
 pycparser==2.22
+PyMySQL==1.1.1
 sqlparse==0.5.3
 tzdata==2025.1
